<resources xmlns:xliff="urn:oasis:names:tc:xliff:document:1.2">
    <string name="app_name">借机系统</string>
    <string name="add_phone_title">添加手机</string>
    <string name="add_phone_name_title">添加手机名称</string>
    <string name="add_phone_name_invalid">请输入有效的手机名称!</string>
    <string name="add_phone_number_title">添加手机数量</string>
    <string name="add_phone_number_invalid">请输入有效的手机数量!</string>
    <string name="add_phone_project_name_title">添加手机项目名称</string>
    <string name="clear_database_success">成功清理数据库!</string>
    <string name="add_phone_success">添加手机成功!</string>
    <string name="update_phone_success">更新手机成功!</string>
    <string name="delete_phone_success">删除手机成功!</string>
    <string name="add_phone_alert_dialog">确定对该修改进行保存吗?</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>

    <string name="action_settings">设置</string>
    <string name="action_sync">同步</string>
    <string name="action_add">添加</string>
    <string name="action_exit">退出</string>
    <string name="sync_in_msg">正在同步&#8230;</string>
    <string name="sync_success_msg">服务器数据同步完成!</string>
    <string name="sync_error_msg">同步失败!!</string>
    <string name="load_more_message">正在加载&#8230;</string>
    <string name="up_data_message">正在上传&#8230;</string>
    <string name="update_message">正在更新&#8230;</string>
    <string name="apply_message">正在申请&#8230;</string>
    <string name="agree_message">正在处理&#8230;</string>
    <string name="backup_message">正在归还&#8230;</string>
    <string name="delete_message">正在删除&#8230;</string>
    <string name="menu_clear_title">清除本地数据</string>
    <string name="menu_app_update">应用更新</string>
    <string name="menu_home_title">主界面</string>
    <string name="menu_my_phone_title">我的手机</string>
    <string name="menu_admin_title">管理员</string>
    <string name="menu_additional_title">附加功能</string>
    <string name="menu_settings">设置</string>
    <string name="menu_about">关于</string>
    <string name="phone_number_left">剩余数量:</string>
    <string name="phone_number_lend">借走数量:</string>
    <string name="phone_number_apply">申请数量:</string>
    <string name="phone_names_lend">借走人员:</string>
    <string name="phone_number_title">手机数量:</string>
    <string name="phone_name_title">手机名称:</string>
    <string name="lend_phone_name_title">借手机者:</string>
    <string name="lend_phone_time_title">申请时间:</string>
    <string name="phone_project_name_title">项目名称:</string>
    <string name="lend_phone_status_title">申请状态:</string>
    <string name="phone_record_time">入库时间:</string>
    <string name="phone_edit_dialog_msg">确定对 <xliff:g id="name">%s</xliff:g> 手机进行编辑或删除?</string>
    <string name="admin_agree_dialog_msg">同意将 <xliff:g id="name">%s</xliff:g> 手机,借给 <xliff:g id="name">%s</xliff:g> 同学吗?</string>
    <string name="apply_backup_dialog_msg">同意将 <xliff:g id="name">%s</xliff:g> 手机归还吗?</string>
    <string name="phone_delete_dialog_msg">确定删除 <xliff:g id="name">%s</xliff:g> 手机吗？</string>
    <string name="edit_phone_title">编辑手机</string>
    <string name="select_picture_title">相册</string>
    <string name="select_capture_title">拍照</string>
    <string name="select_delete_title">删除</string>
    <string name="user_no_login_msg">请点击头像登录</string>
    <string name="title_activity_login">登陆</string>
    <string name="title_activity_update">用户更新</string>
    <string name="exit_app_dialog_msg">确定退出该应用吗?</string>

    <!-- Strings related to login -->
    <string name="prompt_name">姓名</string>
    <string name="prompt_password">密码</string>
    <string name="prompt_password_again">重复密码</string>
    <string name="prompt_department">科室</string>
    <string name="prompt_position">职位</string>
    <string name="action_sign_in">登陆</string>
    <string name="action_save">保存</string>
    <string name="action_register">注册</string>
    <string name="register_success">注册成功,请登陆!</string>
    <string name="exit_account_message">确定退出该账户吗?</string>
    <string name="error_invalid_password">密码太短</string>
    <string name="error_not_same_password">密码不相同</string>
    <string name="error_field_required">该字段不能为空</string>

    <string name="need_permission_msg">需要相应权限才能设置头像!</string>
    <string name="get_permission_error">获取权限失败!</string>
    <string name="get_permission_success">获取权限成功!</string>
    <string name="delete_network_pic_success">删除网络图片成功!</string>

    <string name="lend_phone_title"><xliff:g id="name">%s</xliff:g> 手机详情</string>
    <string name="lend_phone_success_msg">申请成功,耐心等候管理员处理.</string>
    <string name="login_prompt_msg">请登录您的账户!</string>
    <string name="input_lend_phone_number_title">申请几部?(剩余<xliff:g id="name">%s</xliff:g>部)</string>
    <string name="input_number_big_msg">借的太多，库存不够!</string>
    <string name="apply_ing_status">申请中&#8230;</string>
    <string name="apply_suc_status">到手</string>
    <string name="click_to_agree_title">点击同意</string>
    <string name="click_to_backup_title">点击归还</string>
    <string name="backup_ing_title">归还中&#8230;</string>
    <string name="sync_dialog_msg">同步服务器数据，确定？</string>

    <string name="admin_apply_phone_tab">申请手机</string>
    <string name="admin_apply_backup_tab">归还手机</string>
    <string name="aboutContent">做这个项目的缘由是科室内部经常不断的借手机，借着借着手机不知道跑哪去了，很是头疼。后来科长让一个人来统一管理手机。借的人必须登记，这样手机在谁那一目了然。随着项目越来越多，手机也越来越多。管理手机的人每天都要应付借手机和还手机的人，使得自己没法安心工作。我看在眼里也觉得好烦，最近闲了下来，我就打算做一款APP来管理这堆手机，希望能使管理员能轻松点，而且每个人都可以安装APP来查看当前所有手机的状态，借手机只要操作APP即可，管理员看到申请，审批即可，APP会帮你管理手机，岂不是很方便？</string>
    <string name="open_source">• RxJava: github.com/ReactiveX/RxJava\n• RxAndroid: github.com/ReactiveX/RxAndroid\n• GreenDao: github.com/greenrobot/greenDAO\n• Glide: github.com/bumptech/glide\n• Bmob后台云服务支持</string>
    <string name="about_bug_title">意见错误反馈</string>
    <string name="about_update_title">检查软件更新</string>
    <string name="about_share_title">分享借机系统</string>
    <string name="about_pay_title">随意捐赠支持</string>
    <string name="about_blog_title">查看个人博客</string>
    <string name="about_code_title">查看项目源码</string>
    <string name="about_tip_two">一切都很值得</string>
    <string name="about_tip_one">很高兴认识你</string>
    <string name="about_tip_three">感谢开源的世界和开放的资源</string>
    <string name="share_txt">欢迎使用“借机系统”，希望每天都是好心情，您可以在http://www.wandoujia.com/apps/com.xiecc.seeWeather下载</string>
    <string name="share_app">分享-借机系统</string>
    <string name="change_theme_title">更换主题</string>
    <string name="clear_cache_title">清除缓存</string>
    <string name="settings_title">设置</string>

</resources>
