<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">

    <group android:checkableBehavior="single">
        <item
            android:id="@+id/nav_home"
            android:icon="@drawable/ic_home_3x"
            android:title="@string/menu_home_title" />
        <item
            android:id="@+id/nav_user"
            android:icon="@drawable/ic_my_phone_icon"
            android:title="@string/menu_my_phone_title" />
        <item
            android:id="@+id/nav_admin"
            android:icon="@drawable/ic_android_black_48dp"
            android:title="@string/menu_admin_title"
            android:visible="false" />
    </group>

    <item android:title="@string/menu_additional_title">
        <menu>
            <item
                android:id="@+id/nav_clear"
                android:icon="@drawable/ic_delete_3x"
                android:title="@string/menu_clear_title" />
        </menu>
    </item>
</menu>
