<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context="android.wuliqing.com.lendphonesystemapp.AddPhoneActivity">

    <include layout="@layout/toolbar_view" />

    <ImageView
        android:id="@+id/add_phone_photo_view"
        android:layout_gravity="center_horizontal"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:scaleType="fitXY"
        android:src="@drawable/ic_camera_48pt_3x" />

    <android.support.design.widget.TextInputLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <AutoCompleteTextView
            android:id="@+id/add_phone_name_view"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/add_phone_name_title"
            android:inputType="textAutoComplete"
            android:maxLines="1"
            android:singleLine="true" />

    </android.support.design.widget.TextInputLayout>

    <android.support.design.widget.TextInputLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <EditText
            android:id="@+id/add_phone_number_view"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/add_phone_number_title"
            android:inputType="number"
            android:maxLines="1"
            android:singleLine="true" />

    </android.support.design.widget.TextInputLayout>

    <android.support.design.widget.TextInputLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <AutoCompleteTextView
            android:id="@+id/add_phone_project_view"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/add_phone_project_name_title"
            android:inputType="text"
            android:maxLines="1"
            android:singleLine="true" />

    </android.support.design.widget.TextInputLayout>
</LinearLayout>
