<?xml version="1.0" encoding="utf-8"?>
<android.support.v7.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:card_view="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_margin="@dimen/cardview_margin"
    android:clickable="true"
    android:foreground="?android:attr/selectableItemBackground"
    card_view:cardCornerRadius="3dp"
    card_view:cardElevation="2dp">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <RelativeLayout
            android:id="@+id/phone_item_left_layout"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentStart="true"
            android:layout_centerVertical="true"
            android:layout_margin="5dp">

            <ImageView
                android:id="@+id/phone_icon_view"
                android:layout_width="80dp"
                android:layout_height="80dp"
                android:layout_centerHorizontal="true"
                android:contentDescription="@string/app_name"
                android:padding="5dp"
                android:scaleType="fitXY"
                android:src="@drawable/ic_phone_iphone_48pt_2x" />

            <!--<TextView-->
            <!--android:id="@+id/phone_name_view"-->
            <!--android:layout_width="wrap_content"-->
            <!--android:layout_height="wrap_content"-->
            <!--android:layout_below="@id/phone_icon_view"-->
            <!--android:layout_centerHorizontal="true"-->
            <!--android:textAppearance="?android:attr/textAppearanceSmall"-->
            <!--android:textColor="?colorPrimary" />-->
        </RelativeLayout>

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerVertical="true"
            android:layout_toEndOf="@id/phone_item_left_layout"
            android:orientation="vertical">

            <RelativeLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content">

                <TextView
                    android:id="@+id/phone_name_tv"
                    style="@style/listTextViewStyle1"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/phone_name_title" />

                <TextView
                    android:id="@+id/phone_name_view"
                    style="@style/listTextViewStyle"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="5dp"
                    android:layout_toRightOf="@id/phone_name_tv" />
            </RelativeLayout>

            <RelativeLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content">

                <TextView
                    android:id="@+id/phone_number_tv"
                    style="@style/listTextViewStyle1"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/phone_number_title" />

                <TextView
                    android:id="@+id/phone_number_view"
                    style="@style/listTextViewStyle"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="5dp"
                    android:layout_toEndOf="@id/phone_number_tv" />
            </RelativeLayout>

            <RelativeLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content">

                <TextView
                    android:id="@+id/phone_project_tv"
                    style="@style/listTextViewStyle1"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/phone_project_name_title" />

                <TextView
                    android:id="@+id/phone_project_view"
                    style="@style/listTextViewStyle"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="5dp"
                    android:layout_toEndOf="@id/phone_project_tv" />
            </RelativeLayout>

            <RelativeLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content">

                <TextView
                    android:id="@+id/phone_record_time_tv"
                    style="@style/listTextViewStyle1"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/phone_record_time" />

                <TextView
                    android:id="@+id/phone_record_time_view"
                    style="@style/listTextViewStyle"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="5dp"
                    android:layout_toEndOf="@id/phone_record_time_tv" />
            </RelativeLayout>
        </LinearLayout>
    </RelativeLayout>
</android.support.v7.widget.CardView>