<?xml version="1.0" encoding="utf-8"?>
<android.support.v7.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_margin="3dp">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <RelativeLayout
            android:id="@+id/phone_detail_item_left_layout"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentStart="true"
            android:layout_centerVertical="true"
            android:layout_margin="5dp">

            <ImageView
                android:contentDescription="@string/app_name"
                android:id="@+id/phone_detail_icon_view"
                android:layout_width="80dp"
                android:layout_height="80dp"
                android:layout_centerHorizontal="true"
                android:padding="5dp"
                android:scaleType="fitXY"
                android:src="@drawable/ic_phone_iphone_48pt_2x" />

            <TextView
                android:id="@+id/phone_detail_name_view"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_below="@id/phone_detail_icon_view"
                android:layout_centerHorizontal="true"
                android:textAppearance="?android:attr/textAppearanceSmall"
                android:textColor="?colorPrimary" />
        </RelativeLayout>

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerVertical="true"
            android:layout_toEndOf="@id/phone_detail_item_left_layout"
            android:orientation="vertical">

            <RelativeLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content">

                <TextView
                    android:id="@+id/phone_detail_number_left_tv"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/phone_number_left"
                    style="@style/listTextViewStyle1" />

                <TextView
                    android:id="@+id/phone_detail_number_left_view"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="5dp"
                    android:layout_toEndOf="@id/phone_detail_number_left_tv"
                    style="@style/listTextViewStyle"
                    android:textStyle="bold" />
            </RelativeLayout>

            <RelativeLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content">

                <TextView
                    android:id="@+id/phone_detail_number_lend_tv"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/phone_number_lend"
                    style="@style/listTextViewStyle1" />

                <TextView
                    android:id="@+id/phone_detail_number_lend_view"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="5dp"
                    android:layout_toEndOf="@id/phone_detail_number_lend_tv"
                    style="@style/listTextViewStyle"
                    android:textStyle="bold" />
            </RelativeLayout>

            <RelativeLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content">

                <TextView
                    android:id="@+id/phone_detail_names_lend_tv"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/phone_names_lend"
                    style="@style/listTextViewStyle1" />

                <TextView
                    android:id="@+id/phone_detail_names_lend_view"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="5dp"
                    android:layout_toEndOf="@id/phone_detail_names_lend_tv"
                    style="@style/listTextViewStyle"
                    android:textStyle="bold" />
            </RelativeLayout>

            <RelativeLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content">

                <TextView
                    android:id="@+id/phone_detail_record_time_tv"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/phone_record_time"
                    style="@style/listTextViewStyle1" />

                <TextView
                    android:id="@+id/phone_detail_record_time_view"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="5dp"
                    android:layout_toEndOf="@id/phone_detail_record_time_tv"
                    style="@style/listTextViewStyle"
                    android:textStyle="bold" />
            </RelativeLayout>
        </LinearLayout>
    </RelativeLayout>
</android.support.v7.widget.CardView>