<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:background="@drawable/phone_list_bg">

    <RelativeLayout
        android:id="@+id/phone_item_left_layout"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentLeft="true"
        android:layout_centerVertical="true"
        android:layout_margin="5dp">

        <ImageView
            android:id="@+id/my_phone_icon_view"
            android:layout_width="80dp"
            android:layout_height="80dp"
            android:layout_centerHorizontal="true"
            android:padding="5dp"
            android:scaleType="fitXY"
            android:src="@drawable/ic_phone_iphone_48pt_2x" />

        <TextView
            android:id="@+id/my_phone_name_view"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@id/my_phone_icon_view"
            android:layout_centerHorizontal="true"
            android:text="name"
            android:textAppearance="?android:attr/textAppearanceSmall"
            android:textColor="?colorPrimary" />
    </RelativeLayout>

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerVertical="true"
        android:layout_toRightOf="@id/phone_item_left_layout"
        android:orientation="vertical">

        <RelativeLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content">

            <TextView
                android:id="@+id/my_phone_lend_phone_name_tv"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/lend_phone_name_title"
                android:textAppearance="@android:style/TextAppearance.Material.Small" />

            <TextView
                android:id="@+id/my_phone_lend_phone_name_view"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="5dp"
                android:layout_toRightOf="@id/my_phone_lend_phone_name_tv"
                android:text="10"
                android:textAppearance="@android:style/TextAppearance.Material.Small"
                android:textStyle="bold" />
        </RelativeLayout>

        <RelativeLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content">

            <TextView
                android:id="@+id/my_phone_number_tv"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/phone_number_lend"
                android:textAppearance="@android:style/TextAppearance.Material.Small" />

            <TextView
                android:id="@+id/my_phone_number_view"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="5dp"
                android:layout_toRightOf="@id/my_phone_number_tv"
                android:text="10"
                android:textAppearance="@android:style/TextAppearance.Material.Small"
                android:textStyle="bold" />
        </RelativeLayout>

        <RelativeLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content">

            <TextView
                android:id="@+id/my_phone_time_tv"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/lend_phone_time_title"
                android:textAppearance="@android:style/TextAppearance.Material.Small" />

            <TextView
                android:id="@+id/my_phone_time_view"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="5dp"
                android:layout_toRightOf="@id/my_phone_time_tv"
                android:text="2010 10-12"
                android:textAppearance="@android:style/TextAppearance.Material.Small"
                android:textStyle="bold" />
        </RelativeLayout>

        <RelativeLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content">

            <TextView
                android:id="@+id/my_phone_status_tv"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_centerVertical="true"
                android:text="@string/lend_phone_status_title"
                android:textAppearance="@android:style/TextAppearance.Material.Small" />

            <TextView
                android:id="@+id/my_phone_status_view"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_centerVertical="true"
                android:layout_marginLeft="5dp"
                android:layout_toRightOf="@id/my_phone_status_tv"
                android:background="@color/colorPrimary"
                android:padding="2dp"
                android:text="@string/click_to_backup_title"
                android:textAppearance="@android:style/TextAppearance.Material.Small"
                android:textColor="@android:color/white"
                android:textStyle="bold" />
        </RelativeLayout>
    </LinearLayout>

    <!--<TextView-->
    <!--android:id="@+id/lend_status_tv"-->
    <!--android:layout_width="wrap_content"-->
    <!--android:layout_height="wrap_content"-->
    <!--android:layout_alignParentRight="true"-->
    <!--android:layout_centerVertical="true"-->
    <!--android:layout_marginRight="10dp"-->
    <!--android:textColor="@color/colorPrimary" />-->
</RelativeLayout>